2013-02-08  Andreas Tobler  <andreast@fgznet.ch>

	* src/powerpc/ffi.c (ffi_prep_cif_machdep): Fix small struct
	support.
	* src/powerpc/sysv.S: Ditto.

2013-02-08  Anthony Green <green@moxielogic.com>

	* testsuite/libffi.call/cls_longdouble.c: Remove xfail for
	arm*-*-*.

2013-02-08  Anthony Green <green@moxielogic.com>

	* src/sparc/ffi.c (ffi_prep_closure_loc): Fix cache flushing for GCC.

2013-02-08  Matthias Klose  <doko@ubuntu.com>

	* man/ffi_prep_cif.3: Clean up for debian linter.

2013-02-08  Peter Bergner  <bergner@vnet.ibm.com>

	* src/powerpc/ffi.c (ffi_prep_args_SYSV): Account for FP args pushed
	on the stack.

2013-02-08  Anthony Green <green@moxielogic.com>

	* Makefile.am (EXTRA_DIST): Add missing files.
	* testsuite/Makefile.am (EXTRA_DIST): Ditto.
	* Makefile.in: Rebuilt.

2013-02-08  Anthony Green <green@moxielogic.com>

	* configure.ac: Move sparc asm config checks to within functions
	for compatibility with sun tools.
	* configure: Rebuilt.
	* src/sparc/ffi.c (ffi_prep_closure_loc): Flush cache on v9
	systems.
	* src/sparc/v8.S (ffi_flush_icache): Implement a sparc v9 cache
	flusher.

2013-02-08  Nathan Rossi <nathan.rossi@xilinx.com>

	* src/microblaze/ffi.c (ffi_closure_call_SYSV): Fix handling of
	small big-endian structures.
	(ffi_prep_args): Ditto.

2013-02-07  Anthony Green <green@moxielogic.com>

	* src/sparc/v8.S (ffi_call_v8): Fix typo from last patch
	(effectively hiding ffi_call_v8).

2013-02-07  Anthony Green <green@moxielogic.com>

	* configure.ac: Update bug reporting address.
	* configure.in: Rebuild.

	* src/sparc/v8.S (ffi_flush_icache): Out-of-line cache flusher for
	Sun compiler.
	* src/sparc/ffi.c (ffi_call): Remove warning.
	Call ffi_flush_icache for non-GCC builds.
	(ffi_prep_closure_loc): Use ffi_flush_icache.

	* Makefile.am (EXTRA_DIST): Add libtool-ldflags.
	* Makefile.in: Rebuilt.
	* libtool-ldflags: New file.

2013-02-07  Daniel Schepler <dschepler@gmail.com>
